# koder-ide

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/textmate/: languages.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ic_check.xml  ic_file_add.xml  ic_file_generic.xml  ic_folder_open.xml  ic_language_css.xml  ic_language_html.xml  ic_language_java.xml  ic_language_javascript.xml  ic_language_json.xml  ic_language_kotlin.xml  ic_language_markdown.xml  ic_language_python.xml  ic_language_typescript.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_terminal.xml
app/src/main/res/navigation/: main_nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: shortcuts.xml
assets/fonts/: .gitkeep
assets/images/: .gitkeep
assets/themes/: .gitkeep
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/providers/: editor_provider.dart  navigation_provider.dart  theme_provider.dart
lib/screens/: editor_screen.dart  file_browser_screen.dart  settings_screen.dart
lib/utils/: language_utils.dart
lib/widgets/: autocomplete_popup.dart  code_editor.dart  search_panel.dart
rust_core/: Cargo.toml
rust_core/src/: editor.rs  ffi.rs  lib.rs  lsp.rs  search.rs  syntax.rs
test/: widget_test.dart
(+58 files in other folders)
